# ai-agents-workshop

ai-agents-workshop/: pyproject.toml
ai-agents-workshop/day2/: 01_calculator_tool.py  02_web_search_tool.py  03_multiple_tools.py  04_custom_instructions.py
ai-agents-workshop/day3/: 01_custom_tool.py  02_session_memory.py  04_complete_agent.py
